// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test basics.md 1`] = `
<div>
  <div>
    <div
      class="leke-alert-container leke-alert-container-info"
    >
      <div
        class="leke-alert-icon-box"
      >
        <i
          class="leke-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            height="1em"
            viewBox="0 0 1024 1024"
            width="1em"
          >
            <path
              d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm32 664c0 4.4-3.6 8-8 8h-48c-4.4 0-8-3.6-8-8V456c0-4.4 3.6-8 8-8h48c4.4 0 8 3.6 8 8v272zm-32-344a48.01 48.01 0 010-96 48.01 48.01 0 010 96z"
            />
          </svg>
        </i>
      </div>
      <div
        class="leke-alert-context"
      >
        <div
          class="leke-alert-message"
        >
          这是一个很短的提示
        </div>
      </div>
      <div
        class="leke-alert-close-box"
      >
        <i
          class="leke-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            height="1em"
            viewBox="0 0 1024 1024"
            width="1em"
          >
            <path
              d="M563.8 512l262.5-312.9c4.4-5.2.7-13.1-6.1-13.1h-79.8c-4.7 0-9.2 2.1-12.3 5.7L511.6 449.8 295.1 191.7c-3-3.6-7.5-5.7-12.3-5.7H203c-6.8 0-10.5 7.9-6.1 13.1L459.4 512 196.9 824.9A7.95 7.95 0 00203 838h79.8c4.7 0 9.2-2.1 12.3-5.7l216.5-258.1 216.5 258.1c3 3.6 7.5 5.7 12.3 5.7h79.8c6.8 0 10.5-7.9 6.1-13.1L563.8 512z"
            />
          </svg>
        </i>
      </div>
    </div>
    <div
      class="leke-alert-container leke-alert-container-success"
    >
      <div
        class="leke-alert-icon-box"
      >
        <i
          class="leke-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            height="1em"
            viewBox="0 0 1024 1024"
            width="1em"
          >
            <path
              d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm193.5 301.7l-210.6 292a31.8 31.8 0 01-51.7 0L318.5 484.9c-3.8-5.3 0-12.7 6.5-12.7h46.9c10.2 0 19.9 4.9 25.9 13.3l71.2 98.8 157.2-218c6-8.3 15.6-13.3 25.9-13.3H699c6.5 0 10.3 7.4 6.5 12.7z"
            />
          </svg>
        </i>
      </div>
      <div
        class="leke-alert-context"
      >
        <div
          class="leke-alert-message"
        >
          这是一个很短的提示
        </div>
      </div>
      <div
        class="leke-alert-close-box"
      >
        <i
          class="leke-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            height="1em"
            viewBox="0 0 1024 1024"
            width="1em"
          >
            <path
              d="M563.8 512l262.5-312.9c4.4-5.2.7-13.1-6.1-13.1h-79.8c-4.7 0-9.2 2.1-12.3 5.7L511.6 449.8 295.1 191.7c-3-3.6-7.5-5.7-12.3-5.7H203c-6.8 0-10.5 7.9-6.1 13.1L459.4 512 196.9 824.9A7.95 7.95 0 00203 838h79.8c4.7 0 9.2-2.1 12.3-5.7l216.5-258.1 216.5 258.1c3 3.6 7.5 5.7 12.3 5.7h79.8c6.8 0 10.5-7.9 6.1-13.1L563.8 512z"
            />
          </svg>
        </i>
      </div>
    </div>
    <div
      class="leke-alert-container leke-alert-container-info"
    >
      <div
        class="leke-alert-icon-box"
      >
        <i
          class="leke-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            height="1em"
            viewBox="0 0 1024 1024"
            width="1em"
          >
            <path
              d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm32 664c0 4.4-3.6 8-8 8h-48c-4.4 0-8-3.6-8-8V456c0-4.4 3.6-8 8-8h48c4.4 0 8 3.6 8 8v272zm-32-344a48.01 48.01 0 010-96 48.01 48.01 0 010 96z"
            />
          </svg>
        </i>
      </div>
      <div
        class="leke-alert-context"
      >
        <div
          class="leke-alert-message"
        >
          这是一个很短的提示
        </div>
      </div>
      <div
        class="leke-alert-close-box"
      >
        <i
          class="leke-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            height="1em"
            viewBox="0 0 1024 1024"
            width="1em"
          >
            <path
              d="M563.8 512l262.5-312.9c4.4-5.2.7-13.1-6.1-13.1h-79.8c-4.7 0-9.2 2.1-12.3 5.7L511.6 449.8 295.1 191.7c-3-3.6-7.5-5.7-12.3-5.7H203c-6.8 0-10.5 7.9-6.1 13.1L459.4 512 196.9 824.9A7.95 7.95 0 00203 838h79.8c4.7 0 9.2-2.1 12.3-5.7l216.5-258.1 216.5 258.1c3 3.6 7.5 5.7 12.3 5.7h79.8c6.8 0 10.5-7.9 6.1-13.1L563.8 512z"
            />
          </svg>
        </i>
      </div>
    </div>
    <div
      class="leke-alert-container leke-alert-container-error"
    >
      <div
        class="leke-alert-icon-box"
      >
        <i
          class="leke-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            height="1em"
            viewBox="0 0 1024 1024"
            width="1em"
          >
            <path
              d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm165.4 618.2l-66-.3L512 563.4l-99.3 118.4-66.1.3c-4.4 0-8-3.5-8-8 0-1.9.7-3.7 1.9-5.2l130.1-155L340.5 359a8.32 8.32 0 01-1.9-5.2c0-4.4 3.6-8 8-8l66.1.3L512 464.6l99.3-118.4 66-.3c4.4 0 8 3.5 8 8 0 1.9-.7 3.7-1.9 5.2L553.5 514l130 155c1.2 1.5 1.9 3.3 1.9 5.2 0 4.4-3.6 8-8 8z"
            />
          </svg>
        </i>
      </div>
      <div
        class="leke-alert-context"
      >
        <div
          class="leke-alert-message"
        >
          这是一个很短的提示
        </div>
      </div>
      <div
        class="leke-alert-close-box"
      >
        <i
          class="leke-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            height="1em"
            viewBox="0 0 1024 1024"
            width="1em"
          >
            <path
              d="M563.8 512l262.5-312.9c4.4-5.2.7-13.1-6.1-13.1h-79.8c-4.7 0-9.2 2.1-12.3 5.7L511.6 449.8 295.1 191.7c-3-3.6-7.5-5.7-12.3-5.7H203c-6.8 0-10.5 7.9-6.1 13.1L459.4 512 196.9 824.9A7.95 7.95 0 00203 838h79.8c4.7 0 9.2-2.1 12.3-5.7l216.5-258.1 216.5 258.1c3 3.6 7.5 5.7 12.3 5.7h79.8c6.8 0 10.5-7.9 6.1-13.1L563.8 512z"
            />
          </svg>
        </i>
      </div>
    </div>
    <div
      class="leke-alert-container leke-alert-container-warning"
    >
      <div
        class="leke-alert-icon-box"
      >
        <i
          class="leke-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            height="1em"
            viewBox="0 0 1024 1024"
            width="1em"
          >
            <path
              d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm-32 232c0-4.4 3.6-8 8-8h48c4.4 0 8 3.6 8 8v272c0 4.4-3.6 8-8 8h-48c-4.4 0-8-3.6-8-8V296zm32 440a48.01 48.01 0 010-96 48.01 48.01 0 010 96z"
            />
          </svg>
        </i>
      </div>
      <div
        class="leke-alert-context"
      >
        <div
          class="leke-alert-message"
        >
          这是一个很短的提示
        </div>
      </div>
      <div
        class="leke-alert-close-box"
      >
        <i
          class="leke-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            height="1em"
            viewBox="0 0 1024 1024"
            width="1em"
          >
            <path
              d="M563.8 512l262.5-312.9c4.4-5.2.7-13.1-6.1-13.1h-79.8c-4.7 0-9.2 2.1-12.3 5.7L511.6 449.8 295.1 191.7c-3-3.6-7.5-5.7-12.3-5.7H203c-6.8 0-10.5 7.9-6.1 13.1L459.4 512 196.9 824.9A7.95 7.95 0 00203 838h79.8c4.7 0 9.2-2.1 12.3-5.7l216.5-258.1 216.5 258.1c3 3.6 7.5 5.7 12.3 5.7h79.8c6.8 0 10.5-7.9 6.1-13.1L563.8 512z"
            />
          </svg>
        </i>
      </div>
    </div>
  </div>
</div>
`;

exports[`test example1.md 1`] = `
<div>
  <div>
    <div
      class="leke-alert-container leke-alert-container-success"
    >
      <div
        class="leke-alert-icon-box"
      >
        <i
          class="leke-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            height="1em"
            viewBox="0 0 1024 1024"
            width="1em"
          >
            <path
              d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm193.5 301.7l-210.6 292a31.8 31.8 0 01-51.7 0L318.5 484.9c-3.8-5.3 0-12.7 6.5-12.7h46.9c10.2 0 19.9 4.9 25.9 13.3l71.2 98.8 157.2-218c6-8.3 15.6-13.3 25.9-13.3H699c6.5 0 10.3 7.4 6.5 12.7z"
            />
          </svg>
        </i>
      </div>
      <div
        class="leke-alert-context"
      >
        <div
          class="leke-alert-message"
        >
          这是一个很短的提示
        </div>
      </div>
    </div>
    <div
      class="leke-alert-container leke-alert-container-info"
    >
      <div
        class="leke-alert-icon-box"
      >
        <i
          class="leke-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            height="1em"
            viewBox="0 0 1024 1024"
            width="1em"
          >
            <path
              d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm32 664c0 4.4-3.6 8-8 8h-48c-4.4 0-8-3.6-8-8V456c0-4.4 3.6-8 8-8h48c4.4 0 8 3.6 8 8v272zm-32-344a48.01 48.01 0 010-96 48.01 48.01 0 010 96z"
            />
          </svg>
        </i>
      </div>
      <div
        class="leke-alert-context"
      >
        <div
          class="leke-alert-message"
        >
          这是一个很短的提示
        </div>
      </div>
    </div>
    <div
      class="leke-alert-container leke-alert-container-error"
    >
      <div
        class="leke-alert-icon-box"
      >
        <i
          class="leke-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            height="1em"
            viewBox="0 0 1024 1024"
            width="1em"
          >
            <path
              d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm165.4 618.2l-66-.3L512 563.4l-99.3 118.4-66.1.3c-4.4 0-8-3.5-8-8 0-1.9.7-3.7 1.9-5.2l130.1-155L340.5 359a8.32 8.32 0 01-1.9-5.2c0-4.4 3.6-8 8-8l66.1.3L512 464.6l99.3-118.4 66-.3c4.4 0 8 3.5 8 8 0 1.9-.7 3.7-1.9 5.2L553.5 514l130 155c1.2 1.5 1.9 3.3 1.9 5.2 0 4.4-3.6 8-8 8z"
            />
          </svg>
        </i>
      </div>
      <div
        class="leke-alert-context"
      >
        <div
          class="leke-alert-message"
        >
          这是一个很短的提示
        </div>
      </div>
    </div>
    <div
      class="leke-alert-container leke-alert-container-warning"
    >
      <div
        class="leke-alert-icon-box"
      >
        <i
          class="leke-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            height="1em"
            viewBox="0 0 1024 1024"
            width="1em"
          >
            <path
              d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm-32 232c0-4.4 3.6-8 8-8h48c4.4 0 8 3.6 8 8v272c0 4.4-3.6 8-8 8h-48c-4.4 0-8-3.6-8-8V296zm32 440a48.01 48.01 0 010-96 48.01 48.01 0 010 96z"
            />
          </svg>
        </i>
      </div>
      <div
        class="leke-alert-context"
      >
        <div
          class="leke-alert-message"
        >
          这是一个很短的提示
        </div>
      </div>
    </div>
    <br />
    <div
      class="leke-alert-container leke-alert-container-success"
    >
      <div
        class="leke-alert-context"
      >
        <div
          class="leke-alert-message"
        >
          这是一个很短的提示
        </div>
      </div>
      <div
        class="leke-alert-close-box"
      >
        <i
          class="leke-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            height="1em"
            viewBox="0 0 1024 1024"
            width="1em"
          >
            <path
              d="M563.8 512l262.5-312.9c4.4-5.2.7-13.1-6.1-13.1h-79.8c-4.7 0-9.2 2.1-12.3 5.7L511.6 449.8 295.1 191.7c-3-3.6-7.5-5.7-12.3-5.7H203c-6.8 0-10.5 7.9-6.1 13.1L459.4 512 196.9 824.9A7.95 7.95 0 00203 838h79.8c4.7 0 9.2-2.1 12.3-5.7l216.5-258.1 216.5 258.1c3 3.6 7.5 5.7 12.3 5.7h79.8c6.8 0 10.5-7.9 6.1-13.1L563.8 512z"
            />
          </svg>
        </i>
      </div>
    </div>
    <div
      class="leke-alert-container leke-alert-container-info"
    >
      <div
        class="leke-alert-context"
      >
        <div
          class="leke-alert-message"
        >
          这是一个很短的提示
        </div>
      </div>
      <div
        class="leke-alert-close-box"
      >
        <i
          class="leke-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            height="1em"
            viewBox="0 0 1024 1024"
            width="1em"
          >
            <path
              d="M563.8 512l262.5-312.9c4.4-5.2.7-13.1-6.1-13.1h-79.8c-4.7 0-9.2 2.1-12.3 5.7L511.6 449.8 295.1 191.7c-3-3.6-7.5-5.7-12.3-5.7H203c-6.8 0-10.5 7.9-6.1 13.1L459.4 512 196.9 824.9A7.95 7.95 0 00203 838h79.8c4.7 0 9.2-2.1 12.3-5.7l216.5-258.1 216.5 258.1c3 3.6 7.5 5.7 12.3 5.7h79.8c6.8 0 10.5-7.9 6.1-13.1L563.8 512z"
            />
          </svg>
        </i>
      </div>
    </div>
    <div
      class="leke-alert-container leke-alert-container-error"
    >
      <div
        class="leke-alert-context"
      >
        <div
          class="leke-alert-message"
        >
          这是一个很短的提示
        </div>
      </div>
      <div
        class="leke-alert-close-box"
      >
        <i
          class="leke-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            height="1em"
            viewBox="0 0 1024 1024"
            width="1em"
          >
            <path
              d="M563.8 512l262.5-312.9c4.4-5.2.7-13.1-6.1-13.1h-79.8c-4.7 0-9.2 2.1-12.3 5.7L511.6 449.8 295.1 191.7c-3-3.6-7.5-5.7-12.3-5.7H203c-6.8 0-10.5 7.9-6.1 13.1L459.4 512 196.9 824.9A7.95 7.95 0 00203 838h79.8c4.7 0 9.2-2.1 12.3-5.7l216.5-258.1 216.5 258.1c3 3.6 7.5 5.7 12.3 5.7h79.8c6.8 0 10.5-7.9 6.1-13.1L563.8 512z"
            />
          </svg>
        </i>
      </div>
    </div>
    <div
      class="leke-alert-container leke-alert-container-warning"
    >
      <div
        class="leke-alert-context"
      >
        <div
          class="leke-alert-message"
        >
          这是一个很短的提示
        </div>
      </div>
      <div
        class="leke-alert-close-box"
      >
        <i
          class="leke-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            height="1em"
            viewBox="0 0 1024 1024"
            width="1em"
          >
            <path
              d="M563.8 512l262.5-312.9c4.4-5.2.7-13.1-6.1-13.1h-79.8c-4.7 0-9.2 2.1-12.3 5.7L511.6 449.8 295.1 191.7c-3-3.6-7.5-5.7-12.3-5.7H203c-6.8 0-10.5 7.9-6.1 13.1L459.4 512 196.9 824.9A7.95 7.95 0 00203 838h79.8c4.7 0 9.2-2.1 12.3-5.7l216.5-258.1 216.5 258.1c3 3.6 7.5 5.7 12.3 5.7h79.8c6.8 0 10.5-7.9 6.1-13.1L563.8 512z"
            />
          </svg>
        </i>
      </div>
    </div>
    <br />
    <div
      class="leke-alert-container leke-alert-container-success"
    >
      <div
        class="leke-alert-icon-box"
      >
        <i
          class="leke-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            height="1em"
            viewBox="0 0 1024 1024"
            width="1em"
          >
            <path
              d="M915.6 791.514l-74.17-124.67V397.383c0-56.417-24.724-122.04-63.914-173.591-39.847-52.472-95.738-93.635-157.416-115.728-.394-.132-.789-.263-1.052-.395-1.447-.394-6.707-1.972-14.334-4.076v-9.074c0-48.79-42.74-89.952-94.03-89.952s-92.187 41.162-92.187 89.952v8.416c-7.233 1.973-11.704 3.288-12.23 3.55l-.789.264c-62.598 21.567-119.41 62.598-160.046 115.596-39.847 51.946-65.491 118.095-65.491 175.17v269.46L100.772 800.72c-9.994 16.57-9.863 37.085.132 53.656 9.995 16.438 34.324 33.008 54.445 33.008h196.079c11.704 72.461 80.746 121.909 160.177 121.909s146.633-49.448 158.337-121.909H865.89c31.167 0 64.044-30.378 64.044-60.1 0-13.413-5.128-25.906-14.334-35.77M511.605 54.54c23.804 0 43.267 15.518 44.45 37.874-.657-.131-28.142-4.734-45.239-4.734-13.413 0-35.244 2.893-43.66 4.34 1.446-22.225 20.778-37.48 44.45-37.48m0 905.437c-52.604 0-100.079-25.776-111.257-72.593h220.54c-11.047 46.949-56.812 72.593-109.284 72.593m91.925-805.359c106.128 38.269 188.846 144.265 188.846 242.765v269.461c0 3.945-1.71 9.206.395 12.625l82.061 137.295c2.236 3.682 5.26 6.575 8.943 8.548-3.156-1.973-2.367-.131-2.367 1.973 0 4.208-10.915 11.046-15.387 11.046H155.35c-2.894 0-11.047-4.865-12.362-7.101-.658-1.052-1.052-2.499-1.052-3.814 0-1.446.394-2.761 1.052-3.813L228.993 679.6c2.105-3.42-.131-8.68-.131-12.625V397.383c0-100.078 88.768-196.21 192.66-244.08 35.507-14.598 49.842-16.307 89.689-16.307 37.611 0 57.6 2.762 92.319 17.622zm0 0"
            />
          </svg>
        </i>
      </div>
      <div
        class="leke-alert-context"
      >
        <div
          class="leke-alert-message"
        >
          这是一个很短的提示
        </div>
      </div>
      <div
        class="leke-alert-close-box"
      >
        <i
          class="leke-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            height="1em"
            viewBox="0 0 1024 1024"
            width="1em"
          >
            <defs>
              <style />
            </defs>
            <path
              d="M900.823 260.277c-19.01 0-34.331 15.432-34.331 34.331v617.51c0 18.898-15.32 34.33-34.331 34.33H191.839c-18.899 0-34.33-15.32-34.33-34.33v-617.51c0-19.01-15.433-34.33-34.332-34.33-15.656 0-29.298 10.623-33.212 25.72l.335.111c-.67 4.585-.783 12.972-.783 29.634l-.112 70.675c-.111 58.486-.223 136.317-.223 214.26-.224 155.776-.336 311.551-.336 311.551 0 56.808 46.185 102.993 102.993 102.993h640.434c56.808 0 102.993-46.185 102.993-102.993V294.61c-.112-18.9-15.433-34.332-34.443-34.332z"
            />
            <path
              d="M353.317 845.021c6.486-6.486 10.065-15.097 10.065-24.266V317.533c0-19.01-15.432-34.331-34.331-34.331-19.01 0-34.331 15.432-34.331 34.33v503.223c0 18.898 15.32 34.33 34.33 34.33 9.059-.111 17.781-3.578 24.267-10.064zm616.28-744.88H710.94l-80.962-80.963c-6.934-6.821-16.104-10.624-25.609-10.4H419.966c-9.505.112-18.898 3.579-25.72 10.4l-80.963 80.963H54.515c-19.01 0-34.33 15.432-34.33 34.33s15.432 34.444 34.33 34.444h275.766c10.064 0 18.899-3.579 25.72-10.4l80.963-80.963h149.96l80.963 80.963c6.821 6.821 16.215 10.511 25.72 10.4h275.766c19.01 0 34.33-15.433 34.33-34.331.113-18.9-15.208-34.443-34.107-34.443zm-433.33 744.88c6.485-6.486 10.064-15.097 10.064-24.266V317.533c0-19.01-15.432-34.331-34.331-34.331-19.01 0-34.33 15.432-34.33 34.33v503.223c-.113 18.898 15.32 34.33 34.33 34.33 9.17-.111 17.78-3.578 24.266-10.064zm183.06 0c6.486-6.486 10.065-15.097 10.065-24.266V317.533c0-19.01-15.432-34.331-34.331-34.331-19.01 0-34.331 15.432-34.331 34.33v503.223c-.112 18.898 15.32 34.33 34.33 34.33 9.059-.111 17.781-3.578 24.267-10.064z"
            />
          </svg>
        </i>
      </div>
    </div>
    <div
      class="leke-alert-container leke-alert-container-info"
    >
      <div
        class="leke-alert-icon-box"
      >
        <i
          class="leke-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            height="1em"
            viewBox="0 0 1024 1024"
            width="1em"
          >
            <path
              d="M915.6 791.514l-74.17-124.67V397.383c0-56.417-24.724-122.04-63.914-173.591-39.847-52.472-95.738-93.635-157.416-115.728-.394-.132-.789-.263-1.052-.395-1.447-.394-6.707-1.972-14.334-4.076v-9.074c0-48.79-42.74-89.952-94.03-89.952s-92.187 41.162-92.187 89.952v8.416c-7.233 1.973-11.704 3.288-12.23 3.55l-.789.264c-62.598 21.567-119.41 62.598-160.046 115.596-39.847 51.946-65.491 118.095-65.491 175.17v269.46L100.772 800.72c-9.994 16.57-9.863 37.085.132 53.656 9.995 16.438 34.324 33.008 54.445 33.008h196.079c11.704 72.461 80.746 121.909 160.177 121.909s146.633-49.448 158.337-121.909H865.89c31.167 0 64.044-30.378 64.044-60.1 0-13.413-5.128-25.906-14.334-35.77M511.605 54.54c23.804 0 43.267 15.518 44.45 37.874-.657-.131-28.142-4.734-45.239-4.734-13.413 0-35.244 2.893-43.66 4.34 1.446-22.225 20.778-37.48 44.45-37.48m0 905.437c-52.604 0-100.079-25.776-111.257-72.593h220.54c-11.047 46.949-56.812 72.593-109.284 72.593m91.925-805.359c106.128 38.269 188.846 144.265 188.846 242.765v269.461c0 3.945-1.71 9.206.395 12.625l82.061 137.295c2.236 3.682 5.26 6.575 8.943 8.548-3.156-1.973-2.367-.131-2.367 1.973 0 4.208-10.915 11.046-15.387 11.046H155.35c-2.894 0-11.047-4.865-12.362-7.101-.658-1.052-1.052-2.499-1.052-3.814 0-1.446.394-2.761 1.052-3.813L228.993 679.6c2.105-3.42-.131-8.68-.131-12.625V397.383c0-100.078 88.768-196.21 192.66-244.08 35.507-14.598 49.842-16.307 89.689-16.307 37.611 0 57.6 2.762 92.319 17.622zm0 0"
            />
          </svg>
        </i>
      </div>
      <div
        class="leke-alert-context"
      >
        <div
          class="leke-alert-message"
        >
          这是一个很短的提示
        </div>
      </div>
      <div
        class="leke-alert-close-box"
      >
        <i
          class="leke-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            height="1em"
            viewBox="0 0 1024 1024"
            width="1em"
          >
            <defs>
              <style />
            </defs>
            <path
              d="M900.823 260.277c-19.01 0-34.331 15.432-34.331 34.331v617.51c0 18.898-15.32 34.33-34.331 34.33H191.839c-18.899 0-34.33-15.32-34.33-34.33v-617.51c0-19.01-15.433-34.33-34.332-34.33-15.656 0-29.298 10.623-33.212 25.72l.335.111c-.67 4.585-.783 12.972-.783 29.634l-.112 70.675c-.111 58.486-.223 136.317-.223 214.26-.224 155.776-.336 311.551-.336 311.551 0 56.808 46.185 102.993 102.993 102.993h640.434c56.808 0 102.993-46.185 102.993-102.993V294.61c-.112-18.9-15.433-34.332-34.443-34.332z"
            />
            <path
              d="M353.317 845.021c6.486-6.486 10.065-15.097 10.065-24.266V317.533c0-19.01-15.432-34.331-34.331-34.331-19.01 0-34.331 15.432-34.331 34.33v503.223c0 18.898 15.32 34.33 34.33 34.33 9.059-.111 17.781-3.578 24.267-10.064zm616.28-744.88H710.94l-80.962-80.963c-6.934-6.821-16.104-10.624-25.609-10.4H419.966c-9.505.112-18.898 3.579-25.72 10.4l-80.963 80.963H54.515c-19.01 0-34.33 15.432-34.33 34.33s15.432 34.444 34.33 34.444h275.766c10.064 0 18.899-3.579 25.72-10.4l80.963-80.963h149.96l80.963 80.963c6.821 6.821 16.215 10.511 25.72 10.4h275.766c19.01 0 34.33-15.433 34.33-34.331.113-18.9-15.208-34.443-34.107-34.443zm-433.33 744.88c6.485-6.486 10.064-15.097 10.064-24.266V317.533c0-19.01-15.432-34.331-34.331-34.331-19.01 0-34.33 15.432-34.33 34.33v503.223c-.113 18.898 15.32 34.33 34.33 34.33 9.17-.111 17.78-3.578 24.266-10.064zm183.06 0c6.486-6.486 10.065-15.097 10.065-24.266V317.533c0-19.01-15.432-34.331-34.331-34.331-19.01 0-34.331 15.432-34.331 34.33v503.223c-.112 18.898 15.32 34.33 34.33 34.33 9.059-.111 17.781-3.578 24.267-10.064z"
            />
          </svg>
        </i>
      </div>
    </div>
    <div
      class="leke-alert-container leke-alert-container-error"
    >
      <div
        class="leke-alert-icon-box"
      >
        <i
          class="leke-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            height="1em"
            viewBox="0 0 1024 1024"
            width="1em"
          >
            <path
              d="M915.6 791.514l-74.17-124.67V397.383c0-56.417-24.724-122.04-63.914-173.591-39.847-52.472-95.738-93.635-157.416-115.728-.394-.132-.789-.263-1.052-.395-1.447-.394-6.707-1.972-14.334-4.076v-9.074c0-48.79-42.74-89.952-94.03-89.952s-92.187 41.162-92.187 89.952v8.416c-7.233 1.973-11.704 3.288-12.23 3.55l-.789.264c-62.598 21.567-119.41 62.598-160.046 115.596-39.847 51.946-65.491 118.095-65.491 175.17v269.46L100.772 800.72c-9.994 16.57-9.863 37.085.132 53.656 9.995 16.438 34.324 33.008 54.445 33.008h196.079c11.704 72.461 80.746 121.909 160.177 121.909s146.633-49.448 158.337-121.909H865.89c31.167 0 64.044-30.378 64.044-60.1 0-13.413-5.128-25.906-14.334-35.77M511.605 54.54c23.804 0 43.267 15.518 44.45 37.874-.657-.131-28.142-4.734-45.239-4.734-13.413 0-35.244 2.893-43.66 4.34 1.446-22.225 20.778-37.48 44.45-37.48m0 905.437c-52.604 0-100.079-25.776-111.257-72.593h220.54c-11.047 46.949-56.812 72.593-109.284 72.593m91.925-805.359c106.128 38.269 188.846 144.265 188.846 242.765v269.461c0 3.945-1.71 9.206.395 12.625l82.061 137.295c2.236 3.682 5.26 6.575 8.943 8.548-3.156-1.973-2.367-.131-2.367 1.973 0 4.208-10.915 11.046-15.387 11.046H155.35c-2.894 0-11.047-4.865-12.362-7.101-.658-1.052-1.052-2.499-1.052-3.814 0-1.446.394-2.761 1.052-3.813L228.993 679.6c2.105-3.42-.131-8.68-.131-12.625V397.383c0-100.078 88.768-196.21 192.66-244.08 35.507-14.598 49.842-16.307 89.689-16.307 37.611 0 57.6 2.762 92.319 17.622zm0 0"
            />
          </svg>
        </i>
      </div>
      <div
        class="leke-alert-context"
      >
        <div
          class="leke-alert-message"
        >
          这是一个很短的提示
        </div>
      </div>
      <div
        class="leke-alert-close-box"
      >
        <i
          class="leke-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            height="1em"
            viewBox="0 0 1024 1024"
            width="1em"
          >
            <defs>
              <style />
            </defs>
            <path
              d="M900.823 260.277c-19.01 0-34.331 15.432-34.331 34.331v617.51c0 18.898-15.32 34.33-34.331 34.33H191.839c-18.899 0-34.33-15.32-34.33-34.33v-617.51c0-19.01-15.433-34.33-34.332-34.33-15.656 0-29.298 10.623-33.212 25.72l.335.111c-.67 4.585-.783 12.972-.783 29.634l-.112 70.675c-.111 58.486-.223 136.317-.223 214.26-.224 155.776-.336 311.551-.336 311.551 0 56.808 46.185 102.993 102.993 102.993h640.434c56.808 0 102.993-46.185 102.993-102.993V294.61c-.112-18.9-15.433-34.332-34.443-34.332z"
            />
            <path
              d="M353.317 845.021c6.486-6.486 10.065-15.097 10.065-24.266V317.533c0-19.01-15.432-34.331-34.331-34.331-19.01 0-34.331 15.432-34.331 34.33v503.223c0 18.898 15.32 34.33 34.33 34.33 9.059-.111 17.781-3.578 24.267-10.064zm616.28-744.88H710.94l-80.962-80.963c-6.934-6.821-16.104-10.624-25.609-10.4H419.966c-9.505.112-18.898 3.579-25.72 10.4l-80.963 80.963H54.515c-19.01 0-34.33 15.432-34.33 34.33s15.432 34.444 34.33 34.444h275.766c10.064 0 18.899-3.579 25.72-10.4l80.963-80.963h149.96l80.963 80.963c6.821 6.821 16.215 10.511 25.72 10.4h275.766c19.01 0 34.33-15.433 34.33-34.331.113-18.9-15.208-34.443-34.107-34.443zm-433.33 744.88c6.485-6.486 10.064-15.097 10.064-24.266V317.533c0-19.01-15.432-34.331-34.331-34.331-19.01 0-34.33 15.432-34.33 34.33v503.223c-.113 18.898 15.32 34.33 34.33 34.33 9.17-.111 17.78-3.578 24.266-10.064zm183.06 0c6.486-6.486 10.065-15.097 10.065-24.266V317.533c0-19.01-15.432-34.331-34.331-34.331-19.01 0-34.331 15.432-34.331 34.33v503.223c-.112 18.898 15.32 34.33 34.33 34.33 9.059-.111 17.781-3.578 24.267-10.064z"
            />
          </svg>
        </i>
      </div>
    </div>
    <div
      class="leke-alert-container leke-alert-container-warning"
    >
      <div
        class="leke-alert-icon-box"
      >
        <i
          class="leke-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            height="1em"
            viewBox="0 0 1024 1024"
            width="1em"
          >
            <path
              d="M915.6 791.514l-74.17-124.67V397.383c0-56.417-24.724-122.04-63.914-173.591-39.847-52.472-95.738-93.635-157.416-115.728-.394-.132-.789-.263-1.052-.395-1.447-.394-6.707-1.972-14.334-4.076v-9.074c0-48.79-42.74-89.952-94.03-89.952s-92.187 41.162-92.187 89.952v8.416c-7.233 1.973-11.704 3.288-12.23 3.55l-.789.264c-62.598 21.567-119.41 62.598-160.046 115.596-39.847 51.946-65.491 118.095-65.491 175.17v269.46L100.772 800.72c-9.994 16.57-9.863 37.085.132 53.656 9.995 16.438 34.324 33.008 54.445 33.008h196.079c11.704 72.461 80.746 121.909 160.177 121.909s146.633-49.448 158.337-121.909H865.89c31.167 0 64.044-30.378 64.044-60.1 0-13.413-5.128-25.906-14.334-35.77M511.605 54.54c23.804 0 43.267 15.518 44.45 37.874-.657-.131-28.142-4.734-45.239-4.734-13.413 0-35.244 2.893-43.66 4.34 1.446-22.225 20.778-37.48 44.45-37.48m0 905.437c-52.604 0-100.079-25.776-111.257-72.593h220.54c-11.047 46.949-56.812 72.593-109.284 72.593m91.925-805.359c106.128 38.269 188.846 144.265 188.846 242.765v269.461c0 3.945-1.71 9.206.395 12.625l82.061 137.295c2.236 3.682 5.26 6.575 8.943 8.548-3.156-1.973-2.367-.131-2.367 1.973 0 4.208-10.915 11.046-15.387 11.046H155.35c-2.894 0-11.047-4.865-12.362-7.101-.658-1.052-1.052-2.499-1.052-3.814 0-1.446.394-2.761 1.052-3.813L228.993 679.6c2.105-3.42-.131-8.68-.131-12.625V397.383c0-100.078 88.768-196.21 192.66-244.08 35.507-14.598 49.842-16.307 89.689-16.307 37.611 0 57.6 2.762 92.319 17.622zm0 0"
            />
          </svg>
        </i>
      </div>
      <div
        class="leke-alert-context"
      >
        <div
          class="leke-alert-message"
        >
          这是一个很短的提示
        </div>
      </div>
      <div
        class="leke-alert-close-box"
      >
        <i
          class="leke-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            height="1em"
            viewBox="0 0 1024 1024"
            width="1em"
          >
            <defs>
              <style />
            </defs>
            <path
              d="M900.823 260.277c-19.01 0-34.331 15.432-34.331 34.331v617.51c0 18.898-15.32 34.33-34.331 34.33H191.839c-18.899 0-34.33-15.32-34.33-34.33v-617.51c0-19.01-15.433-34.33-34.332-34.33-15.656 0-29.298 10.623-33.212 25.72l.335.111c-.67 4.585-.783 12.972-.783 29.634l-.112 70.675c-.111 58.486-.223 136.317-.223 214.26-.224 155.776-.336 311.551-.336 311.551 0 56.808 46.185 102.993 102.993 102.993h640.434c56.808 0 102.993-46.185 102.993-102.993V294.61c-.112-18.9-15.433-34.332-34.443-34.332z"
            />
            <path
              d="M353.317 845.021c6.486-6.486 10.065-15.097 10.065-24.266V317.533c0-19.01-15.432-34.331-34.331-34.331-19.01 0-34.331 15.432-34.331 34.33v503.223c0 18.898 15.32 34.33 34.33 34.33 9.059-.111 17.781-3.578 24.267-10.064zm616.28-744.88H710.94l-80.962-80.963c-6.934-6.821-16.104-10.624-25.609-10.4H419.966c-9.505.112-18.898 3.579-25.72 10.4l-80.963 80.963H54.515c-19.01 0-34.33 15.432-34.33 34.33s15.432 34.444 34.33 34.444h275.766c10.064 0 18.899-3.579 25.72-10.4l80.963-80.963h149.96l80.963 80.963c6.821 6.821 16.215 10.511 25.72 10.4h275.766c19.01 0 34.33-15.433 34.33-34.331.113-18.9-15.208-34.443-34.107-34.443zm-433.33 744.88c6.485-6.486 10.064-15.097 10.064-24.266V317.533c0-19.01-15.432-34.331-34.331-34.331-19.01 0-34.33 15.432-34.33 34.33v503.223c-.113 18.898 15.32 34.33 34.33 34.33 9.17-.111 17.78-3.578 24.266-10.064zm183.06 0c6.486-6.486 10.065-15.097 10.065-24.266V317.533c0-19.01-15.432-34.331-34.331-34.331-19.01 0-34.331 15.432-34.331 34.33v503.223c-.112 18.898 15.32 34.33 34.33 34.33 9.059-.111 17.781-3.578 24.267-10.064z"
            />
          </svg>
        </i>
      </div>
    </div>
  </div>
</div>
`;

exports[`test example2.md 1`] = `
<div>
  <div>
    <div
      class="leke-alert-container leke-alert-container-info leke-alert-has-title-container"
    >
      <div
        class="leke-alert-icon-box leke-alert-has-title-icon-box"
      >
        <i
          class="leke-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            height="1em"
            viewBox="0 0 1024 1024"
            width="1em"
          >
            <path
              d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm32 664c0 4.4-3.6 8-8 8h-48c-4.4 0-8-3.6-8-8V456c0-4.4 3.6-8 8-8h48c4.4 0 8 3.6 8 8v272zm-32-344a48.01 48.01 0 010-96 48.01 48.01 0 010 96z"
            />
          </svg>
        </i>
      </div>
      <div
        class="leke-alert-context"
      >
        <div
          class="leke-alert-title"
        >
          这是一个标题
        </div>
        <div
          class="leke-alert-message"
        >
          这是一段很长的信息这是一段很长的信息这是一段很长的信息这是一段很长的信息这是一段很长的信息这是一段很长的信息这是一段很长的信息这是一段很长的信息这是一段很长的信息这是一段很长的信息这是一段很长的信息这是一段很长的信息这是一段很长的信息这是一段很长的信息这是一段很长的信息这是一段很长的信息这是一段很长的信息这是一段很长的信息这是一段很长的信息这是一段很长的信息这是一段很长的信息这是一段很长的信息这是一段很长的信息这是一段很长的信息这是一段很长的信息
        </div>
      </div>
      <div
        class="leke-alert-close-box leke-alert-has-title-close-box"
      >
        <i
          class="leke-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            height="1em"
            viewBox="0 0 1024 1024"
            width="1em"
          >
            <path
              d="M563.8 512l262.5-312.9c4.4-5.2.7-13.1-6.1-13.1h-79.8c-4.7 0-9.2 2.1-12.3 5.7L511.6 449.8 295.1 191.7c-3-3.6-7.5-5.7-12.3-5.7H203c-6.8 0-10.5 7.9-6.1 13.1L459.4 512 196.9 824.9A7.95 7.95 0 00203 838h79.8c4.7 0 9.2-2.1 12.3-5.7l216.5-258.1 216.5 258.1c3 3.6 7.5 5.7 12.3 5.7h79.8c6.8 0 10.5-7.9 6.1-13.1L563.8 512z"
            />
          </svg>
        </i>
      </div>
    </div>
    <div
      class="leke-alert-container leke-alert-container-info leke-alert-has-title-container"
    >
      <div
        class="leke-alert-icon-box leke-alert-has-title-icon-box"
      >
        <i
          class="leke-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            height="1em"
            viewBox="0 0 1024 1024"
            width="1em"
          >
            <path
              d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm32 664c0 4.4-3.6 8-8 8h-48c-4.4 0-8-3.6-8-8V456c0-4.4 3.6-8 8-8h48c4.4 0 8 3.6 8 8v272zm-32-344a48.01 48.01 0 010-96 48.01 48.01 0 010 96z"
            />
          </svg>
        </i>
      </div>
      <div
        class="leke-alert-context"
      >
        <div
          class="leke-alert-title"
        >
          <p>
            这是一个标题这是一个标题这是一个标题这是一个标题这是一个标题这是一个标题这是一个标题这是一个标题这是一个标题这是一个标题这是一个标题这是一个标题这是一个标题这是一个标题这是一个标题这是一个标题这是一个标题这是一个标题这是一个标题这是一个标题这是一个标题这是一个标题这是一个标题这是一个标题这是一个标题这是一个标题这是一个标题这是一个标题这是一个标题这是一个标题
          </p>
        </div>
        <div
          class="leke-alert-message"
        >
          这是一段很长的信息这是一段很长的信息这是一段很长的信息这是一段很长的信息这是一段很长的信息这是一段很长的信息这是一段很长的信息这是一段很长的信息这是一段很长的信息这是一段很长的信息这是一段很长的信息这是一段很长的信息这是一段很长的信息这是一段很长的信息这是一段很长的信息这是一段很长的信息这是一段很长的信息这是一段很长的信息这是一段很长的信息这是一段很长的信息这是一段很长的信息这是一段很长的信息这是一段很长的信息这是一段很长的信息这是一段很长的信息
        </div>
      </div>
      <div
        class="leke-alert-close-box leke-alert-has-title-close-box"
      >
        <i
          class="leke-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            height="1em"
            viewBox="0 0 1024 1024"
            width="1em"
          >
            <path
              d="M563.8 512l262.5-312.9c4.4-5.2.7-13.1-6.1-13.1h-79.8c-4.7 0-9.2 2.1-12.3 5.7L511.6 449.8 295.1 191.7c-3-3.6-7.5-5.7-12.3-5.7H203c-6.8 0-10.5 7.9-6.1 13.1L459.4 512 196.9 824.9A7.95 7.95 0 00203 838h79.8c4.7 0 9.2-2.1 12.3-5.7l216.5-258.1 216.5 258.1c3 3.6 7.5 5.7 12.3 5.7h79.8c6.8 0 10.5-7.9 6.1-13.1L563.8 512z"
            />
          </svg>
        </i>
      </div>
    </div>
    <div
      class="leke-alert-container leke-alert-container-info leke-alert-has-title-container"
    >
      <div
        class="leke-alert-icon-box leke-alert-has-title-icon-box"
      >
        <i
          class="leke-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            height="1em"
            viewBox="0 0 1024 1024"
            width="1em"
          >
            <path
              d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm32 664c0 4.4-3.6 8-8 8h-48c-4.4 0-8-3.6-8-8V456c0-4.4 3.6-8 8-8h48c4.4 0 8 3.6 8 8v272zm-32-344a48.01 48.01 0 010-96 48.01 48.01 0 010 96z"
            />
          </svg>
        </i>
      </div>
      <div
        class="leke-alert-context"
      >
        <div
          class="leke-alert-title"
        >
          <p
            style="width: 100%; white-space: nowrap; overflow: hidden; text-overflow: ellipsis;"
          >
            这是一个标题这是一个标题这是一个标题这是一个标题这是一个标题这是一个标题这是一个标题这是一个标题这是一个标题这是一个标题这是一个标题这是一个标题这是一个标题这是一个标题这是一个标题这是一个标题这是一个标题这是一个标题这是一个标题这是一个标题这是一个标题这是一个标题这是一个标题这是一个标题这是一个标题这是一个标题这是一个标题这是一个标题这是一个标题这是一个标题
          </p>
        </div>
        <div
          class="leke-alert-message"
        >
          <p
            style="width: 100%; white-space: nowrap; overflow: hidden; text-overflow: ellipsis;"
          >
            这是一段很长的信息这是一段很长的信息这是一段很长的信息这是一段很长的信息这是一段很长的信息这是一段很长的信息这是一段很长的信息这是一段很长的信息这是一段很长的信息这是一段很长的信息这是一段很长的信息这是一段很长的信息这是一段很长的信息这是一段很长的信息这是一段很长的信息这是一段很长的信息这是一段很长的信息这是一段很长的信息这是一段很长的信息这是一段很长的信息这是一段很长的信息这是一段很长的信息这是一段很长的信息这是一段很长的信息这是一段很长的信息
            <button>
              查看更多
            </button>
          </p>
        </div>
      </div>
      <div
        class="leke-alert-close-box leke-alert-has-title-close-box"
      >
        <i
          class="leke-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            height="1em"
            viewBox="0 0 1024 1024"
            width="1em"
          >
            <path
              d="M563.8 512l262.5-312.9c4.4-5.2.7-13.1-6.1-13.1h-79.8c-4.7 0-9.2 2.1-12.3 5.7L511.6 449.8 295.1 191.7c-3-3.6-7.5-5.7-12.3-5.7H203c-6.8 0-10.5 7.9-6.1 13.1L459.4 512 196.9 824.9A7.95 7.95 0 00203 838h79.8c4.7 0 9.2-2.1 12.3-5.7l216.5-258.1 216.5 258.1c3 3.6 7.5 5.7 12.3 5.7h79.8c6.8 0 10.5-7.9 6.1-13.1L563.8 512z"
            />
          </svg>
        </i>
      </div>
    </div>
    <div
      class="leke-alert-container leke-alert-container-info leke-alert-has-title-container"
    >
      <div
        class="leke-alert-icon-box leke-alert-has-title-icon-box"
      >
        <i
          class="leke-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            height="1em"
            viewBox="0 0 1024 1024"
            width="1em"
          >
            <path
              d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm32 664c0 4.4-3.6 8-8 8h-48c-4.4 0-8-3.6-8-8V456c0-4.4 3.6-8 8-8h48c4.4 0 8 3.6 8 8v272zm-32-344a48.01 48.01 0 010-96 48.01 48.01 0 010 96z"
            />
          </svg>
        </i>
      </div>
      <div
        class="leke-alert-context"
      >
        <div
          class="leke-alert-title"
        >
          <p
            style="width: 100%; white-space: nowrap; overflow: hidden; text-overflow: ellipsis;"
          >
            这是一个标题这是一个标题这是一个标题这是一个标题这是一个标题这是一个标题这是一个标题这是一个标题这是一个标题这是一个标题这是一个标题这是一个标题这是一个标题这是一个标题这是一个标题这是一个标题这是一个标题这是一个标题这是一个标题这是一个标题这是一个标题这是一个标题这是一个标题这是一个标题这是一个标题这是一个标题这是一个标题这是一个标题这是一个标题这是一个标题
          </p>
        </div>
        <div
          class="leke-alert-message"
        >
          <p>
            这是一段很长的信息这是一段很长的信息这是一段很长的信息这是一段很长的信息这是一段很长的信息这是一段很长的信息这是一段很长的信息这是一段很长的信息这是一段很长的信息这是一段很长的信息这是一段很长的信息这是一段很长的信息这是一段很长的信息这是一段很长的信息这是一段很长的信息这是一段很长的信息这是一段很长的信息这是一段很长的信息这是一段很长的信息这是一段很长的信息这是一段很长的信息这是一段很长的信息这是一段很长的信息这是一段很长的信息这是一段很长的信息
            <button
              style="margin-left: 10px;"
            >
              查看更多
            </button>
          </p>
        </div>
      </div>
      <div
        class="leke-alert-close-box leke-alert-has-title-close-box"
      >
        <i
          class="leke-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            height="1em"
            viewBox="0 0 1024 1024"
            width="1em"
          >
            <path
              d="M563.8 512l262.5-312.9c4.4-5.2.7-13.1-6.1-13.1h-79.8c-4.7 0-9.2 2.1-12.3 5.7L511.6 449.8 295.1 191.7c-3-3.6-7.5-5.7-12.3-5.7H203c-6.8 0-10.5 7.9-6.1 13.1L459.4 512 196.9 824.9A7.95 7.95 0 00203 838h79.8c4.7 0 9.2-2.1 12.3-5.7l216.5-258.1 216.5 258.1c3 3.6 7.5 5.7 12.3 5.7h79.8c6.8 0 10.5-7.9 6.1-13.1L563.8 512z"
            />
          </svg>
        </i>
      </div>
    </div>
  </div>
</div>
`;

exports[`test example3.md 1`] = `
<div>
  <div>
    <div
      class="leke-alert-container leke-alert-container-success leke-alert-has-title-container"
    >
      <div
        class="leke-alert-icon-box leke-alert-has-title-icon-box"
      >
        <i
          class="leke-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            height="1em"
            viewBox="0 0 1024 1024"
            width="1em"
          >
            <path
              d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm193.5 301.7l-210.6 292a31.8 31.8 0 01-51.7 0L318.5 484.9c-3.8-5.3 0-12.7 6.5-12.7h46.9c10.2 0 19.9 4.9 25.9 13.3l71.2 98.8 157.2-218c6-8.3 15.6-13.3 25.9-13.3H699c6.5 0 10.3 7.4 6.5 12.7z"
            />
          </svg>
        </i>
      </div>
      <div
        class="leke-alert-context"
      >
        <div
          class="leke-alert-title"
        >
          这是一个标题
        </div>
        <div
          class="leke-alert-message"
        >
          这是一个很短的提示这是一个很短的提示这是一个很短的提示这是一
                    个很短的提示这是一个很短的提示这是一个很短的提示这是一个很短
                    的提示这是一个很短的提示这是一个很短的提示这是一个很短的提示
                    这是一个很短的提示这是一个很短的提示这是一个很短的提示这是
                    一个很短的提示这是一个很短的提示这是一个很短的提示这是一个
                    很短的提示这是一个很短的提示这是一个很短的提示这是一个很
                    短的提示这是一个很短的提示
        </div>
      </div>
      <div
        class="leke-alert-action-box"
      >
        <button>
          12321312
        </button>
        <button>
          12321312
        </button>
        <button>
          12321312
        </button>
        <button>
          12321312
        </button>
      </div>
      <div
        class="leke-alert-close-box leke-alert-has-title-close-box"
      >
        <i
          class="leke-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            height="1em"
            viewBox="0 0 1024 1024"
            width="1em"
          >
            <path
              d="M563.8 512l262.5-312.9c4.4-5.2.7-13.1-6.1-13.1h-79.8c-4.7 0-9.2 2.1-12.3 5.7L511.6 449.8 295.1 191.7c-3-3.6-7.5-5.7-12.3-5.7H203c-6.8 0-10.5 7.9-6.1 13.1L459.4 512 196.9 824.9A7.95 7.95 0 00203 838h79.8c4.7 0 9.2-2.1 12.3-5.7l216.5-258.1 216.5 258.1c3 3.6 7.5 5.7 12.3 5.7h79.8c6.8 0 10.5-7.9 6.1-13.1L563.8 512z"
            />
          </svg>
        </i>
      </div>
    </div>
    <div
      class="leke-alert-container leke-alert-container-info leke-alert-has-title-container"
    >
      <div
        class="leke-alert-icon-box leke-alert-has-title-icon-box"
      >
        <i
          class="leke-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            height="1em"
            viewBox="0 0 1024 1024"
            width="1em"
          >
            <path
              d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm32 664c0 4.4-3.6 8-8 8h-48c-4.4 0-8-3.6-8-8V456c0-4.4 3.6-8 8-8h48c4.4 0 8 3.6 8 8v272zm-32-344a48.01 48.01 0 010-96 48.01 48.01 0 010 96z"
            />
          </svg>
        </i>
      </div>
      <div
        class="leke-alert-context"
      >
        <div
          class="leke-alert-title"
        >
          这是一个标题
        </div>
        <div
          class="leke-alert-message"
        >
          这是一个很短的提示
        </div>
      </div>
      <div
        class="leke-alert-action-box"
      >
        <div
          style="display: flex; flex-direction: column;"
        >
          <button>
            12321312
          </button>
          <button>
            12321312
          </button>
          <button>
            12321312
          </button>
          <button>
            12321312
          </button>
        </div>
      </div>
      <div
        class="leke-alert-close-box leke-alert-has-title-close-box"
      >
        <i
          class="leke-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            height="1em"
            viewBox="0 0 1024 1024"
            width="1em"
          >
            <path
              d="M563.8 512l262.5-312.9c4.4-5.2.7-13.1-6.1-13.1h-79.8c-4.7 0-9.2 2.1-12.3 5.7L511.6 449.8 295.1 191.7c-3-3.6-7.5-5.7-12.3-5.7H203c-6.8 0-10.5 7.9-6.1 13.1L459.4 512 196.9 824.9A7.95 7.95 0 00203 838h79.8c4.7 0 9.2-2.1 12.3-5.7l216.5-258.1 216.5 258.1c3 3.6 7.5 5.7 12.3 5.7h79.8c6.8 0 10.5-7.9 6.1-13.1L563.8 512z"
            />
          </svg>
        </i>
      </div>
    </div>
    <div
      class="leke-alert-container leke-alert-container-info"
    >
      <div
        class="leke-alert-icon-box"
      >
        <i
          class="leke-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            height="1em"
            viewBox="0 0 1024 1024"
            width="1em"
          >
            <path
              d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm32 664c0 4.4-3.6 8-8 8h-48c-4.4 0-8-3.6-8-8V456c0-4.4 3.6-8 8-8h48c4.4 0 8 3.6 8 8v272zm-32-344a48.01 48.01 0 010-96 48.01 48.01 0 010 96z"
            />
          </svg>
        </i>
      </div>
      <div
        class="leke-alert-context"
      >
        <div
          class="leke-alert-message"
        >
          这是一个很短的提示
        </div>
      </div>
      <div
        class="leke-alert-action-box"
      >
        <button>
          12321312
        </button>
      </div>
      <div
        class="leke-alert-close-box"
      >
        <i
          class="leke-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            height="1em"
            viewBox="0 0 1024 1024"
            width="1em"
          >
            <path
              d="M563.8 512l262.5-312.9c4.4-5.2.7-13.1-6.1-13.1h-79.8c-4.7 0-9.2 2.1-12.3 5.7L511.6 449.8 295.1 191.7c-3-3.6-7.5-5.7-12.3-5.7H203c-6.8 0-10.5 7.9-6.1 13.1L459.4 512 196.9 824.9A7.95 7.95 0 00203 838h79.8c4.7 0 9.2-2.1 12.3-5.7l216.5-258.1 216.5 258.1c3 3.6 7.5 5.7 12.3 5.7h79.8c6.8 0 10.5-7.9 6.1-13.1L563.8 512z"
            />
          </svg>
        </i>
      </div>
    </div>
  </div>
</div>
`;

exports[`test example4.md 1`] = `
<div>
  <div>
    <div
      class="leke-alert-container leke-alert-container-success"
      style="border-radius: 0;"
    >
      <div
        class="leke-alert-icon-box"
      >
        <i
          class="leke-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            height="1em"
            viewBox="0 0 1024 1024"
            width="1em"
          >
            <path
              d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm193.5 301.7l-210.6 292a31.8 31.8 0 01-51.7 0L318.5 484.9c-3.8-5.3 0-12.7 6.5-12.7h46.9c10.2 0 19.9 4.9 25.9 13.3l71.2 98.8 157.2-218c6-8.3 15.6-13.3 25.9-13.3H699c6.5 0 10.3 7.4 6.5 12.7z"
            />
          </svg>
        </i>
      </div>
      <div
        class="leke-alert-context"
      >
        <div
          class="leke-alert-message"
        >
          这是一个很短的提示这是一个很短的提示这是一个很短的提示这是一个很短的提示
        </div>
      </div>
      <div
        class="leke-alert-close-box"
      >
        <i
          class="leke-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            height="1em"
            viewBox="0 0 1024 1024"
            width="1em"
          >
            <path
              d="M563.8 512l262.5-312.9c4.4-5.2.7-13.1-6.1-13.1h-79.8c-4.7 0-9.2 2.1-12.3 5.7L511.6 449.8 295.1 191.7c-3-3.6-7.5-5.7-12.3-5.7H203c-6.8 0-10.5 7.9-6.1 13.1L459.4 512 196.9 824.9A7.95 7.95 0 00203 838h79.8c4.7 0 9.2-2.1 12.3-5.7l216.5-258.1 216.5 258.1c3 3.6 7.5 5.7 12.3 5.7h79.8c6.8 0 10.5-7.9 6.1-13.1L563.8 512z"
            />
          </svg>
        </i>
      </div>
    </div>
    <div
      class="leke-alert-container leke-alert-container-warning"
      style="border-radius: 0;"
    >
      <div
        class="leke-alert-icon-box"
      >
        <i
          class="leke-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            height="1em"
            viewBox="0 0 1024 1024"
            width="1em"
          >
            <path
              d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm-32 232c0-4.4 3.6-8 8-8h48c4.4 0 8 3.6 8 8v272c0 4.4-3.6 8-8 8h-48c-4.4 0-8-3.6-8-8V296zm32 440a48.01 48.01 0 010-96 48.01 48.01 0 010 96z"
            />
          </svg>
        </i>
      </div>
      <div
        class="leke-alert-context"
      >
        <div
          class="leke-alert-message"
        >
          这是一个很短的提示这是一个很短的提示这是一个很短的提示这是一个很短的提示
        </div>
      </div>
      <div
        class="leke-alert-close-box"
      >
        <i
          class="leke-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            height="1em"
            viewBox="0 0 1024 1024"
            width="1em"
          >
            <path
              d="M563.8 512l262.5-312.9c4.4-5.2.7-13.1-6.1-13.1h-79.8c-4.7 0-9.2 2.1-12.3 5.7L511.6 449.8 295.1 191.7c-3-3.6-7.5-5.7-12.3-5.7H203c-6.8 0-10.5 7.9-6.1 13.1L459.4 512 196.9 824.9A7.95 7.95 0 00203 838h79.8c4.7 0 9.2-2.1 12.3-5.7l216.5-258.1 216.5 258.1c3 3.6 7.5 5.7 12.3 5.7h79.8c6.8 0 10.5-7.9 6.1-13.1L563.8 512z"
            />
          </svg>
        </i>
      </div>
    </div>
    <div
      class="leke-alert-container leke-alert-container-info"
      style="border-radius: 0;"
    >
      <div
        class="leke-alert-icon-box"
      >
        <i
          class="leke-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            height="1em"
            viewBox="0 0 1024 1024"
            width="1em"
          >
            <path
              d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm32 664c0 4.4-3.6 8-8 8h-48c-4.4 0-8-3.6-8-8V456c0-4.4 3.6-8 8-8h48c4.4 0 8 3.6 8 8v272zm-32-344a48.01 48.01 0 010-96 48.01 48.01 0 010 96z"
            />
          </svg>
        </i>
      </div>
      <div
        class="leke-alert-context"
      >
        <div
          class="leke-alert-message"
        >
          这是一个很短的提示这是一个很短的提示这是一个很短的提示这是一个很短的提示
        </div>
      </div>
      <div
        class="leke-alert-close-box"
      >
        <i
          class="leke-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            height="1em"
            viewBox="0 0 1024 1024"
            width="1em"
          >
            <path
              d="M563.8 512l262.5-312.9c4.4-5.2.7-13.1-6.1-13.1h-79.8c-4.7 0-9.2 2.1-12.3 5.7L511.6 449.8 295.1 191.7c-3-3.6-7.5-5.7-12.3-5.7H203c-6.8 0-10.5 7.9-6.1 13.1L459.4 512 196.9 824.9A7.95 7.95 0 00203 838h79.8c4.7 0 9.2-2.1 12.3-5.7l216.5-258.1 216.5 258.1c3 3.6 7.5 5.7 12.3 5.7h79.8c6.8 0 10.5-7.9 6.1-13.1L563.8 512z"
            />
          </svg>
        </i>
      </div>
    </div>
    <div
      class="leke-alert-container leke-alert-container-error"
      style="border-radius: 0;"
    >
      <div
        class="leke-alert-icon-box"
      >
        <i
          class="leke-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            height="1em"
            viewBox="0 0 1024 1024"
            width="1em"
          >
            <path
              d="M512 64C264.6 64 64 264.6 64 512s200.6 448 448 448 448-200.6 448-448S759.4 64 512 64zm165.4 618.2l-66-.3L512 563.4l-99.3 118.4-66.1.3c-4.4 0-8-3.5-8-8 0-1.9.7-3.7 1.9-5.2l130.1-155L340.5 359a8.32 8.32 0 01-1.9-5.2c0-4.4 3.6-8 8-8l66.1.3L512 464.6l99.3-118.4 66-.3c4.4 0 8 3.5 8 8 0 1.9-.7 3.7-1.9 5.2L553.5 514l130 155c1.2 1.5 1.9 3.3 1.9 5.2 0 4.4-3.6 8-8 8z"
            />
          </svg>
        </i>
      </div>
      <div
        class="leke-alert-context"
      >
        <div
          class="leke-alert-message"
        >
          这是一个很短的提示这是一个很短的提示这是一个很短的提示这是一个很短的提示
        </div>
      </div>
      <div
        class="leke-alert-close-box"
      >
        <i
          class="leke-icon"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            height="1em"
            viewBox="0 0 1024 1024"
            width="1em"
          >
            <path
              d="M563.8 512l262.5-312.9c4.4-5.2.7-13.1-6.1-13.1h-79.8c-4.7 0-9.2 2.1-12.3 5.7L511.6 449.8 295.1 191.7c-3-3.6-7.5-5.7-12.3-5.7H203c-6.8 0-10.5 7.9-6.1 13.1L459.4 512 196.9 824.9A7.95 7.95 0 00203 838h79.8c4.7 0 9.2-2.1 12.3-5.7l216.5-258.1 216.5 258.1c3 3.6 7.5 5.7 12.3 5.7h79.8c6.8 0 10.5-7.9 6.1-13.1L563.8 512z"
            />
          </svg>
        </i>
      </div>
    </div>
  </div>
</div>
`;
